@@ -1,24 +1,36 @@
 /*
- * Copyright (c) 2022-2023 - The MegaMek Team. All Rights Reserved.
+ * Copyright (C) 2022-2025 The MegaMek Team. All Rights Reserved.
  *
  * This file is part of MegaMek.
  *
  * MegaMek is free software: you can redistribute it and/or modify
- * it under the terms of the GNU General Public License as published by
- * the Free Software Foundation, either version 3 of the License, or
- * (at your option) any later version.
+ * it under the terms of the GNU General Public License (GPL),
+ * version 3 or (at your option) any later version,
+ * as published by the Free Software Foundation.
  *
  * MegaMek is distributed in the hope that it will be useful,
- * but WITHOUT ANY WARRANTY; without even the implied warranty of
- * MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE. See the
- * GNU General Public License for more details.
+ * but WITHOUT ANY WARRANTY; without even the implied warranty
+ * of MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.
+ * See the GNU General Public License for more details.
  *
- * You should have received a copy of the GNU General Public License
- * along with MegaMek. If not, see <http://www.gnu.org/licenses/>.
+ * A copy of the GPL should have been included with this project;
+ * if not, see <https://www.gnu.org/licenses/>.
+ *
+ * NOTICE: The MegaMek organization is a non-profit group of volunteers
+ * creating free software for the BattleTech community.
+ *
+ * MechWarrior, BattleMech, `Mech and AeroTech are registered trademarks
+ * of The Topps Company, Inc. All Rights Reserved.
+ *
+ * Catalyst Game Labs and the Catalyst Game Labs logo are trademarks of
+ * InMediaRes Productions, LLC.
+ *
+ * MechWarrior Copyright Microsoft Corporation. <Package Name> was created under
+ * Microsoft's "Game Content Usage Rules"
+ * <https://www.xbox.com/en-US/developers/rules> and it is not endorsed by or
+ * affiliated with Microsoft.
  */
 package megamek.common.eras;
-
-import static java.util.stream.Collectors.toList;
 
 import java.io.File;
 import java.io.FileInputStream;
@@ -33,25 +45,21 @@ import java.util.List;
 import java.util.Set;
 import java.util.TreeMap;
 
+import megamek.MMConstants;
+import megamek.common.annotations.Nullable;
+import megamek.common.interfaces.ITechnology;
+import megamek.common.util.fileUtils.MegaMekFile;
+import megamek.logging.MMLogger;
+import megamek.utilities.xml.MMXMLUtility;
 import org.w3c.dom.Document;
 import org.w3c.dom.Element;
 import org.w3c.dom.Node;
 import org.w3c.dom.NodeList;
 
-import megamek.MMConstants;
-import megamek.common.annotations.Nullable;
-import megamek.common.util.fileUtils.MegaMekFile;
-import megamek.logging.MMLogger;
-import megamek.utilities.xml.MMXMLUtility;
-
 /**
- * This singleton class is a handler for the Eras of the BT Universe like the
- * Civil War or the
- * Succession Wars. The Eras are read from the eras.xml definition file and are
- * thus moddable.
- * The class therefore has a few methods that deal with validation and is
- * supposed to be
- * resistant to wrong data.
+ * This singleton class is a handler for the Eras of the BT Universe like the Civil War or the Succession Wars. The Eras
+ * are read from the eras.xml definition file and are thus moddable. The class therefore has a few methods that deal
+ * with validation and is supposed to be resistant to wrong data.
  *
  * @author Justin "Windchild" Bowen
  * @author Simon (Juliez)
@@ -60,8 +68,7 @@ public final class Eras {
     private static final MMLogger logger = MMLogger.create(Eras.class);
 
     /**
-     * @return The sole instance of Eras. Calling this also initialises and loads
-     *         the eras.
+     * @return The sole instance of Eras. Calling this also initializes and loads the eras.
      */
     public static Eras getInstance() {
         if (instance == null) {
@@ -71,25 +78,24 @@ public final class Eras {
     }
 
     /**
-     * Returns the {@link Era} of the given date. For the canon eras the day makes
-     * no difference but the eras
-     * definition xml allows eras to be defined with day resolution.
+     * Returns the {@link Era} of the given date. For the canon eras, the day makes no difference, but the era
+     * definition XML allows eras to be defined with day resolution.
      *
      * @param date The date to get the Era for
-     * @return The Era of the given date, e.g. IlClan on March 25, 3153
+     *
+     * @return The Era of the given date, e.g., IlClan on March 25, 3153
      */
     public static Era getEra(final LocalDate date) {
         return getInstance().eras.ceilingEntry(date).getValue();
     }
 
     /**
-     * Returns the {@link Era} of the first day of the given year (January 1st). For
-     * the canon eras the day
-     * makes no difference but the eras definition xml allows eras to be defined
-     * with day resolution. Therefore
-     * it is preferable to use {@link #getEra(LocalDate)} when a date is available.
+     * Returns the {@link Era} of the first day of the given year (January 1st). For the canon eras, the day makes no
+     * difference, but the eras definition xml allows eras to be defined with day resolution. Therefore, it is
+     * preferable to use {@link #getEra(LocalDate)} when a date is available.
      *
      * @param year The year to get the Era for
+     *
      * @return The Era on January 1st of the given year
      */
     public static Era getEra(final int year) {
@@ -101,6 +107,7 @@ public final class Eras {
      *
      * @param date The date to test
      * @param era  The Era to check against the date
+     *
      * @return True when the date is in the Era's date range
      */
     public static boolean isThisEra(LocalDate date, Era era) {
@@ -109,9 +116,7 @@ public final class Eras {
     }
 
     /**
-     * Returns a list of all Eras, ordered by their end dates, i.e. in their natural
-     * order with the oldest
-     * being first.
+     * Returns a list of all Eras, ordered by their end dates, i.e. in their natural order with the oldest being first.
      *
      * @return All Eras
      */
@@ -125,8 +130,7 @@ public final class Eras {
     }
 
     /**
-     * @return The era directly preceding the given Era, if any, null if the given
-     *         Era is the first era (or null).
+     * @return The era directly preceding the given Era, if any, null if the given Era is the first era (or null).
      */
     public static @Nullable Era previousEra(@Nullable Era era) {
         if (era == null) {
@@ -137,8 +141,7 @@ public final class Eras {
     }
 
     /**
-     * @return The era directly following the given Era, if any, null if the given
-     *         Era is the last era (or null).
+     * @return The era directly following the given Era, if any, null if the given Era is the last era (or null).
      */
     public static @Nullable Era nextEra(@Nullable Era era) {
         if (era == null) {
@@ -149,8 +152,7 @@ public final class Eras {
     }
 
     /**
-     * @return The starting date of the given Era or LocalDate.MIN if the given Era
-     *         is the first era.
+     * @return The starting date of the given Era or LocalDate.MIN if the given Era is the first era.
      */
     public static LocalDate startDate(Era era) {
         if (isFirstEra(era)) {
@@ -160,6 +162,47 @@ public final class Eras {
         }
     }
 
+    /**
+     * Generates era text for a date range, similar to the original eraText method
+     *
+     * @param startYear Start year of the range
+     * @param endYear   End year of the range (null for open-ended)
+     *
+     * @return Era text string
+     */
+    public static String getEraText(int startYear, Integer endYear) {
+        String eraText = "";
+        if (startYear != ITechnology.DATE_NONE) {
+            Era startEra = Eras.getEra(startYear);
+            if (endYear == null) {
+                // Open-ended range
+                eraText = " (" + startEra.name() + " and onwards)";
+            } else {
+                Era endEra = Eras.getEra(endYear);
+                eraText = " (" + startEra.name();
+                if (!endEra.equals(startEra)) {
+                    eraText += " to " + endEra.name();
+                }
+                eraText += ")";
+            }
+        }
+        return eraText;
+    }
+
+    /**
+     * Generates era text for a date range, similar to the original eraText method
+     *
+     * @param year the year in question
+     *
+     * @return Era text string
+     */
+    public static String getEraText(int year) {
+        String eraText = "";
+        if (year != ITechnology.DATE_NONE) {
+            eraText = " (" + Eras.getEra(year).name() + ")";
+        }
+        return eraText;
+    }
     // region non-public
 
     private static final Era ERA_PLACEHOLDER = new Era("???", "Unknown", null, null, -1, null);
@@ -169,8 +212,7 @@ public final class Eras {
     private final TreeMap<LocalDate, Era> eras = new TreeMap<>();
 
     /**
-     * This list contains all eras, even if they're malformed and is used for
-     * trouble-shooting.
+     * This list contains all eras, even if they're malformed and is used for troubleshooting.
      */
     private final List<Era> eraList = new ArrayList<>();
 
@@ -206,14 +248,14 @@ public final class Eras {
         for (int x = 0; x < nl.getLength(); x++) {
             final Node wn = nl.item(x);
             if (wn.getParentNode().equals(element) && (wn.getNodeType() == Node.ELEMENT_NODE)
-                    && wn.getNodeName().equalsIgnoreCase("era") && wn.hasChildNodes()) {
+                  && wn.getNodeName().equalsIgnoreCase("era") && wn.hasChildNodes()) {
                 addEra(generateInstanceFromXML(wn.getChildNodes()));
             }
         }
         eraList.sort(Comparator.comparing(Era::end));
         if (!areAllValid(null)) {
             logger
-                    .error("The eras definition file " + MMConstants.ERAS_FILE_PATH + "contains malformed eras!");
+                  .error("The eras definition file {}contains malformed eras!", MMConstants.ERAS_FILE_PATH);
         }
     }
 
@@ -255,22 +297,19 @@ public final class Eras {
     }
 
     /**
-     * @return True when the code, name and mulId of the era are valid. When true,
-     *         the era may still be invalid.
+     * @return True when the code, name and mulId of the era are valid. When true, the era may still be invalid.
      */
     private boolean isValid(Era era) {
         return !era.code().isBlank() && !era.name().isBlank()
-                && ((era.mulId() == -1) || (era.mulId() > 0));
+              && ((era.mulId() == -1) || (era.mulId() > 0));
     }
 
     /**
-     * Returns true when the set of eras is valid (meaning the xml file has no
-     * malformed entries.)
-     * A Set can be passed in that will receive all invalid eras if there are any.
-     * Note that the
-     * Set is not emptied before being used.
+     * Returns true when the set of eras is valid (meaning the xml file has no malformed entries.) A Set can be passed
+     * in that will receive all invalid eras if there are any. Note that the Set is not emptied before being used.
      *
      * @param invalidErasReturn An optional Set to receive invalid eras.
+     *
      * @return True when all eras are valid, false otherwise
      */
     boolean areAllValid(@Nullable Set<Era> invalidErasReturn) {
@@ -290,18 +329,15 @@ public final class Eras {
 
         // Exactly one era must be the last era
         if (eraList.stream().filter(Era::isLastEra).count() != 1) {
-            invalidErasReturn.addAll(eraList.stream().filter(Era::isLastEra).collect(toList()));
+            invalidErasReturn.addAll(eraList.stream().filter(Era::isLastEra).toList());
         }
 
         return invalidErasReturn.isEmpty();
     }
 
     /**
-     * Returns all Eras, possibly including invalid ones. This is only for Era
-     * editing when even invalid eras
-     * should be available. Use {@link #getEras()} in all other circumstances. This
-     * method is intentionally
-     * package private.
+     * Returns all Eras, possibly including invalid ones. This is only for Era editing when even invalid eras should be
+     * available. Use {@link #getEras()} in all other circumstances. This method is intentionally package private.
      *
      * @return All eras, possibly also invalid ones.
      */
